[package]
name = "fairyring_contract"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.16.0
"""

[dependencies]
cosmwasm-schema = "2.1.0"
cosmwasm-std = { version = "2.1.0", features = [
  "cosmwasm_1_4",
  # Enable this if you only deploy to chains that have CosmWasm 2.0 or higher
  "cosmwasm_2_0",
] }
cw-storage-plus = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
schemars = "0.8"
thiserror = "1.0"
prost = "0.13.3"  # Protobuf support
prost-types = "0.13"
# tonic = { version = "0.12.3", features = ["prost", "tls"] }
fairblock-proto = { git = "https://github.com/Fairblock/fairblock-rust/", branch = "main", default-features = false }
# getrandom = { version = "0.2", features = ["js"] }
# mio = "1.0.2"
# tokio = "1.40.0"

[dev-dependencies]
cw-multi-test = "2.0.0"
